--- a/my project/index.html
+++ b/my project/index.html
@@ -4,14 +4,15 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Sketch</title>
+    <title>My First Website</title>
 
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
 
   <body>
-    <h1>Hello world</h1>
-
+    <header>
+    <h1>Welcome to my WebSite</h1>
+    <p></p>
    
     <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.min.js"></script>
 
