basic site layout

--- a/my project/index.html
+++ b/my project/index.html
@@ -12,7 +12,7 @@
   <body>
     <header>
     <h1>Welcome to my WebSite</h1>
-    <p></p>
+    <p>blabla bla </p>
    
     <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.min.js"></script>
 
