--- a/my project/index.html
+++ b/my project/index.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>My First Website</title>
-
+ <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
 
   <body>
-    <header>
+   <header></header>
     <h1>Welcome to my WebSite</h1>
     <p>blabla bla </p>
    
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.min.js"></script>
+   
 
     
     <script src="sketch.js"></script>
