--- a/my project/index.html
+++ b/my project/index.html
@@ -10,13 +10,21 @@
   </head>
 
   <body>
-   <header></header>
-    <h1>Welcome to my WebSite</h1>
+    <header>
+      <h1>Welcome to my WebSite</h1>
     <p>blabla bla </p>
-   
-   
+    </header>
+    <div>
+      
+     <script src="sketch.js"></script>
+     </div>
+    <h2>HTML Image</h2>
 
-    
-    <script src="sketch.js"></script>
+       <div class="photo">
+   <img src="boy.png" alt="Boy" width="300" 
+   height="300">
+   </div>
+
+   
   </body>
 </html>
