--- a/my project/index.html
+++ b/my project/index.html
@@ -23,6 +23,7 @@
 
        <div class="photo">
    <img src="boy.png" alt="Boy" width="300" 
+   style="border-radius:30px;"
    height="300">
    </div>
 
